Instantiate model and view model as static resources in the main window XAML

--- a/PathFind.csproj
+++ b/PathFind.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Models\GridCoordinate.cs" />
     <Compile Include="ViewModels\MapVM.cs" />
     <Compile Include="Views\MapView.cs" />
     <Page Include="MainWindow.xaml">
