--- a/PathFind.csproj
+++ b/PathFind.csproj
@@ -56,6 +56,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Models\GridCoordinate.cs" />
+    <Compile Include="PathFinders\BreadthFirstSearch.cs" />
+    <Compile Include="PathFinders\ICellColoring.cs" />
+    <Compile Include="PathFinders\PathFinder.cs" />
     <Compile Include="ViewModels\MapVM.cs" />
     <Compile Include="Views\MapView.cs" />
     <Compile Include="Views\MouseController.cs" />
