--- a/Tests/PathFindTests.csproj
+++ b/Tests/PathFindTests.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Models\MapTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ObservableDictionaryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\App\PathFind.csproj">
