Moved ObservableCollection and GridCoordinate classes to new namespace PathFind.Core

--- a/Tests/PathFindTests.csproj
+++ b/Tests/PathFindTests.csproj
@@ -44,15 +44,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\GridCoordinateTests.cs" />
+    <Compile Include="Core\ObservableDictionaryTests.cs" />
     <Compile Include="Models\MapTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\ObservableDictionaryTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\App\PathFind.csproj">
       <Project>{3369792F-7813-4415-A8EE-ABDE134C2951}</Project>
       <Name>PathFind</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
