--- a/App/PathFind.csproj
+++ b/App/PathFind.csproj
@@ -55,12 +55,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Models\GridCoordinate.cs" />
+    <Compile Include="Core\GridCoordinate.cs" />
+    <Compile Include="Core\ObservableDictionary.cs" />
     <Compile Include="PathFinders\BreadthFirstSearch.cs" />
     <Compile Include="PathFinders\ICellColoring.cs" />
     <Compile Include="PathFinders\PathFinder.cs" />
     <Compile Include="ViewModels\MapVM.cs" />
-    <Compile Include="ViewModels\ObservableDictionary.cs" />
     <Compile Include="Views\MapView.cs" />
     <Compile Include="Views\MouseController.cs" />
     <Page Include="MainWindow.xaml">
