Changed the Map.BlockedCells property to an IObservableDictionary

--- a/Tests/PathFindTests.csproj
+++ b/Tests/PathFindTests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Core\ObservableDictionaryTests.cs" />
     <Compile Include="Models\MapTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\MapVMTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\App\PathFind.csproj">
@@ -55,9 +56,7 @@
       <Name>PathFind</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="ViewModels\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
