--- a/Tests/PathFindTests.csproj
+++ b/Tests/PathFindTests.csproj
@@ -35,6 +35,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\ThirdParty\NUnit-2.6.2\bin\framework\nunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
