Moved some view-specific stuff for mouse interaction out of MapVM to MouseController and MapView

--- a/App/PathFind.csproj
+++ b/App/PathFind.csproj
@@ -64,6 +64,7 @@
     <Compile Include="ViewModels\MainWindowVM.cs" />
     <Compile Include="ViewModels\MapVM.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
+    <Compile Include="Views\IMapView.cs" />
     <Compile Include="Views\MapView.cs" />
     <Compile Include="Views\MouseController.cs" />
     <Page Include="MainWindow.xaml">
