--- a/App/PathFind.csproj
+++ b/App/PathFind.csproj
@@ -55,9 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Collections\IObservableDictionary.cs" />
+    <Compile Include="Collections\ObservableDictionary.cs" />
     <Compile Include="Core\GridCoordinate.cs" />
-    <Compile Include="Core\IObservableDictionary.cs" />
-    <Compile Include="Core\ObservableDictionary.cs" />
     <Compile Include="PathFinders\BreadthFirstSearch.cs" />
     <Compile Include="PathFinders\ICellColoring.cs" />
     <Compile Include="PathFinders\PathFinder.cs" />
