--- a/Tests/PathFindTests.csproj
+++ b/Tests/PathFindTests.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\ObservableDictionaryTests.cs" />
+    <Compile Include="Collections\ObservableSetTests.cs" />
     <Compile Include="Core\GridCoordinateTests.cs" />
     <Compile Include="Models\MapTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
