Made pathfinding stop if the map is changed

--- a/App/PathFind.csproj
+++ b/App/PathFind.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Collections\ObservableDictionary.cs" />
     <Compile Include="Collections\ObservableSet.cs" />
     <Compile Include="Core\GridCoordinate.cs" />
+    <Compile Include="Models\MapExtensions.cs" />
     <Compile Include="PathFinders\BreadthFirstSearch.cs" />
     <Compile Include="PathFinders\ICellColoring.cs" />
     <Compile Include="PathFinders\PathFinder.cs" />
