--- a/Tests/PathFindTests.csproj
+++ b/Tests/PathFindTests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Collections\ObservableDictionaryTests.cs" />
     <Compile Include="Collections\ObservableSetTests.cs" />
     <Compile Include="Core\GridCoordinateTests.cs" />
+    <Compile Include="Models\MapExtensionsTests.cs" />
     <Compile Include="Models\MapTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MapVMTests.cs" />
