--- a/App/PathFind.csproj
+++ b/App/PathFind.csproj
@@ -62,7 +62,9 @@
     <Compile Include="Collections\ObservableSet.cs" />
     <Compile Include="Collections\PriorityQueue.cs" />
     <Compile Include="Core\GridCoordinate.cs" />
+    <Compile Include="Core\GridCoordinateUtils.cs" />
     <Compile Include="Models\MapExtensions.cs" />
+    <Compile Include="PathFinders\AStar.cs" />
     <Compile Include="PathFinders\BreadthFirstSearch.cs" />
     <Compile Include="PathFinders\ICellColoring.cs" />
     <Compile Include="PathFinders\PathFinder.cs" />
