--- a/Tests/PathFindTests.csproj
+++ b/Tests/PathFindTests.csproj
@@ -43,6 +43,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Collections\HeapUtilsTests.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="Core\GridCoordinateTests.cs" />
     <Compile Include="Models\MapExtensionsTests.cs" />
     <Compile Include="Models\MapTests.cs" />
+    <Compile Include="PathFinders\AStarTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MapVMTests.cs" />
   </ItemGroup>
