Added a combo box to the toolbar for selecting the pathing algorithm to use.  Not hooked up yet; search always uses BFS still.

--- a/Tests/PathFindTests.csproj
+++ b/Tests/PathFindTests.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Models\MapTests.cs" />
     <Compile Include="PathFinders\AStarTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\MainWindowVMTests.cs" />
     <Compile Include="ViewModels\MapVMTests.cs" />
   </ItemGroup>
   <ItemGroup>
