--- a/Tests/PathFindTests.csproj
+++ b/Tests/PathFindTests.csproj
@@ -36,8 +36,10 @@
       <HintPath>..\ThirdParty\NUnit-2.6.2\bin\framework\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
