--- a/App/PathFind.csproj
+++ b/App/PathFind.csproj
@@ -73,6 +73,9 @@
     <Compile Include="ViewModels\ViewModel.cs" />
     <Compile Include="Views\IMapView.cs" />
     <Compile Include="Views\MapCanvas.cs" />
+    <Compile Include="Views\MapView.xaml.cs">
+      <DependentUpon>MapView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\MouseController.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -88,6 +91,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Views\MapView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Map.cs" />
