--- a/App/PathFind.csproj
+++ b/App/PathFind.csproj
@@ -71,6 +71,7 @@
     <Compile Include="ViewModels\MainWindowVM.cs" />
     <Compile Include="ViewModels\MapVM.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
+    <Compile Include="Views\DisplayNameConverter.cs" />
     <Compile Include="Views\MapCanvas.cs" />
     <Compile Include="Views\MapView.xaml.cs">
       <DependentUpon>MapView.xaml</DependentUpon>
