--- a/Tests/PathFindTests.csproj
+++ b/Tests/PathFindTests.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\MainWindowVMTests.cs" />
     <Compile Include="ViewModels\MapVMTests.cs" />
+    <Compile Include="Views\DisplayNameConverterTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\App\PathFind.csproj">
