Pulled all map testing utility functions into new class MapUtilsForTesting

--- a/Tests/PathFindTests.csproj
+++ b/Tests/PathFindTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Collections\ObservableSetTests.cs" />
     <Compile Include="Collections\PriorityQueueTests.cs" />
     <Compile Include="Core\GridCoordinateTests.cs" />
+    <Compile Include="MapUtilsForTesting.cs" />
     <Compile Include="Models\MapExtensionsTests.cs" />
     <Compile Include="Models\MapTests.cs" />
     <Compile Include="PathFinders\AStarTests.cs" />
