--- a/App/PathFind.csproj
+++ b/App/PathFind.csproj
@@ -68,6 +68,7 @@
     <Compile Include="PathFinders\BreadthFirstSearch.cs" />
     <Compile Include="PathFinders\ICellColoring.cs" />
     <Compile Include="PathFinders\PathFinder.cs" />
+    <Compile Include="ViewModels\CellVM.cs" />
     <Compile Include="ViewModels\MainWindowVM.cs" />
     <Compile Include="ViewModels\MapVM.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
