--- a/Tests/PathFindTests.csproj
+++ b/Tests/PathFindTests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Models\MapTests.cs" />
     <Compile Include="PathFinders\AStarTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\CellVMTests.cs" />
     <Compile Include="ViewModels\MainWindowVMTests.cs" />
     <Compile Include="ViewModels\MapVMTests.cs" />
     <Compile Include="Views\DisplayNameConverterTests.cs" />
