--- a/App/PathFind.csproj
+++ b/App/PathFind.csproj
@@ -72,6 +72,7 @@
     <Compile Include="ViewModels\MainWindowVM.cs" />
     <Compile Include="ViewModels\MapVM.cs" />
     <Compile Include="ViewModels\ViewModel.cs" />
+    <Compile Include="Views\CellTemplateSelector.cs" />
     <Compile Include="Views\DisplayNameConverter.cs" />
     <Compile Include="Views\MapCanvas.cs" />
     <Compile Include="Views\MapView.xaml.cs">
