--- a/App/PathFind.csproj
+++ b/App/PathFind.csproj
@@ -79,6 +79,7 @@
       <DependentUpon>MapView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MouseController.cs" />
+    <Compile Include="Views\ResizingAdorner.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
