Detect cycles while constructing a path
In PathFinder.BuildPath(), throw an exception if the path under construction
already contains the next predecessor in the chain.

--- a/Tests/PathSamplerTests.csproj
+++ b/Tests/PathSamplerTests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Models\MapExtensionsTests.cs" />
     <Compile Include="Models\MapTests.cs" />
     <Compile Include="PathFinders\AStarTests.cs" />
+    <Compile Include="PathFinders\PathFinderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\CellVMTests.cs" />
     <Compile Include="ViewModels\MainWindowVMTests.cs" />
