--- a/App/PathSampler.csproj
+++ b/App/PathSampler.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Models\MapExtensions.cs" />
     <Compile Include="PathFinders\AStar.cs" />
     <Compile Include="PathFinders\BreadthFirstSearch.cs" />
+    <Compile Include="PathFinders\DepthFirstSearch.cs" />
     <Compile Include="PathFinders\ICellColoring.cs" />
     <Compile Include="PathFinders\PathFinder.cs" />
     <Compile Include="ViewModels\CellVM.cs" />
